# nnForge

./: Main.mk  Makefile.am  Settings.mk  configure.ac
examples/: Makefile.am
examples/galaxy_zoo/: galaxy_zoo_toolset.cpp
examples/gtsrb/: gtsrb_toolset.cpp
nnforge/: Makefile.am  convolution_layer.cpp  distort_2d_data_transformer.cpp  distort_2d_data_transformer.h  intensity_2d_data_transformer.cpp  intensity_2d_data_transformer.h  network_updater.cpp  neural_network_toolset.cpp  noise_data_transformer.cpp  noise_data_transformer.h  rnd.h  rotate_band_2d_data_transformer.cpp  rotate_band_2d_data_transformer.h  supervised_data_stream_reader.cpp
nnforge/plain/: average_subsampling_layer_hessian_plain.cpp  average_subsampling_layer_tester_plain.cpp  average_subsampling_layer_updater_plain.cpp  convolution_layer_hessian_plain.cpp  convolution_layer_tester_plain.cpp  convolution_layer_updater_plain.cpp  max_subsampling_layer_hessian_plain.cpp  max_subsampling_layer_tester_plain.cpp  max_subsampling_layer_updater_plain.cpp  network_updater_plain.cpp
